executor exception handler added and file read service fixed